--- a/VOA_BBC_CNN英文新闻精听精练/2.md
+++ b/VOA_BBC_CNN英文新闻精听精练/2.md
@@ -1,4 +1,4 @@
-Obama, in Mideast speech, supports Palestinian Demand
+# Obama, in Mideast speech, supports Palestinian Demand
 
 President Obama discussed the political unrest in the Middle East and North Africa in a speech Thursday in Washington.
 
