--- a/VOA_BBC_CNN英文新闻精听精练/3.md
+++ b/VOA_BBC_CNN英文新闻精听精练/3.md
@@ -4,6 +4,6 @@ Al-Qaeda on Friday confirmed the death of its leader, Osama Bin Ladin. The SITE 
 
 Al-Qaeda also urged Pakistanis to rebel against their government. It urged them to "cleanse the shame that has been attached to them" by the death in Pakistan. American Special Forces killed Osama Bin Ladin early Monday during a raid on a house where he had been living.
 
-President Obama announed the news late Sunday night in Washington. Abbottabad is about two-hours drive from Islamabad, the Pakistani capital, and has a large military presence. But Pakistani officals say they have no idea the Al-Qaeda leader was there. Mr. Obama said his death does not mark the end of the threat.
+President Obama announced the news late Sunday night in Washington. Abbottabad is about two-hours drive from Islamabad, the Pakistani capital, and has a large military presence. But Pakistani officials say they have no idea the Al-Qaeda leader was there. Mr. Obama said his death does not mark the end of the threat.
 
 Mr. Obama also had a message for families who lost loved ones to Al-Qaeda's terror.
