--- a/VOA_BBC_CNN英文新闻精听精练/4.md
+++ b/VOA_BBC_CNN英文新闻精听精练/4.md
@@ -6,7 +6,7 @@ But a spokesman says the President was well within his constitutional rights to 
 
 On Thursday, NATO, the North Atlantic Treaty Organization agreed to take command of a no-fly zone over Libya. A Canadian general will <s>hear</s> head the alliance's operation there.
 
-The United Nations Security Counsil approved the <s>light</s> flight ban last week to protect civilians, including those in Benghazi. That eastern city is the center of a rebellion against Libyan leader Muammar Gaddafi.
+The United Nations Security Council approved the <s>light</s> flight ban last week to protect civilians, including those in Benghazi. That eastern city is the center of a rebellion against Libyan leader Muammar Gaddafi.
 
 Planes from an international coalition carried out new strikes Friday against Libyan military targets, south of Benghazi. Earlier, the United Arab Emirates agreed to send 12 planes to help enforce the no-fly zone.
 
