--- a/VOA_BBC_CNN英文新闻精听精练/BBC/1-3.md
+++ b/VOA_BBC_CNN英文新闻精听精练/BBC/1-3.md
@@ -5,3 +5,6 @@ Among the offices raided are U.S.-based organizations, the National Democratic I
 "We call on the Egyptian government to immediately end the harassment of the NGOs, NGO staff, return all property and resolve this issue, immediately."
 
 Egypt recently blamed foreign intervention for the resurgence of anti-government protests.
+
+- 注解
+	- `property` 作`财产`来讲不可数，`房产`来讲就是可数
