--- a/VOA_BBC_CNN英文新闻精听精练/BBC/1-3.md
+++ b/VOA_BBC_CNN英文新闻精听精练/BBC/1-3.md
@@ -7,4 +7,4 @@ Among the offices raided are U.S.-based organizations, the National Democratic I
 Egypt recently blamed foreign intervention for the resurgence of anti-government protests.
 
 - 注解
-	- `property` 作`财产`来讲不可数，`房产`来讲就是可数
+	- `property` 作`财产`来讲不可数，`房产`来讲就是可数，作`性质`来讲通常用复数
