03 耐药性肺结核病全世界蔓延

--- a/VOA慢速英语拿起就会/01全球领袖/02 埃塞俄比亚领导人梅莱斯病情迷离.md
+++ b/VOA慢速英语拿起就会/01全球领袖/02 埃塞俄比亚领导人梅莱斯病情迷离.md
@@ -1,16 +1,16 @@
 # TODO: 待校验
 
-This week, Ethiopians were closely following any news about the condition of Prime Minister Malas Zenawi.
+This week, Ethiopians were closely following any news about the condition of Prime Minister Meles Zenawi.
 
 A spokesman said in Addis Ababa on Thursday that the Prime Minister was taking sick leave on doctor's orders.
 
-Spokesman Bereket Simon said Mr. Malas's health was good, but he needed time to recover from an illness caused in part by an overload of work.
+Spokesman Bereket Simon said Mr. Meles's health was good, but he needed time to recover from an illness caused in part by an overload of work.
 
 "Regarding his illness, I think I have told you that he is in good condition, he has got very good treatment for the ailment, and definitely he is in good condition."
 
-Mr. Bereket did not give any details of what the 57-year-old Prime Minister was being treated for or where, but he denied reports on Ethiopian dissident websites that Mr. Malas had brain cancer.
+Mr. Bereket did not give any details of what the 57-year-old Prime Minister was being treated for or where, but he denied reports on Ethiopian dissident websites that Mr. Meles had brain cancer.
 
-The spokesman said the government was operating as normal, and that Mr. Malas was still in power.
+The spokesman said the government was operating as normal, and that Mr. Meles was still in power.
 
 "All the things I can say you is , he has to take some rests, doesn't mean that nobody in charge."
 
