--- a/VOA慢速英语拿起就会/10灾难/03 耐药性肺结核病全世界蔓延.md
+++ b/VOA慢速英语拿起就会/10灾难/03 耐药性肺结核病全世界蔓延.md
@@ -21,6 +21,7 @@ The World Health Organization says 69 countries have reported cases of "extensiv
 The WHO says at least 25,000 such cases are reported worldwide every year.
 
 - 注解：
+  - tuberculosis: 肺结核
   - strain: 品种，菌株
   - extensively: 广泛地
   - worldwide: 既可以作为形容词，也可以作为副词，这里是副词
